--- a/employee-tracker/package.json
+++ b/employee-tracker/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://mac95860/github.io/ReactEmployeeTracker",
   "name": "employee-tracker",
   "version": "0.1.0",
   "private": true,
@@ -12,12 +13,12 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
