--- a/employee-tracker/package.json
+++ b/employee-tracker/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mac95860/github.io/ReactEmployeeTracker",
+  "homepage": "https://mac95860.github.io/ReactEmployeeTracker/",
   "name": "employee-tracker",
   "version": "0.1.0",
   "private": true,
